--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aes-gcm = { version = "0.10.3", features = ["std"] }
+once_cell = "1.19.0"
+pbkdf2 = { version = "0.12.2", features = ["std"] }
+rand = "0.8.5"
+sha2 = "0.10.8"
